--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             getMarvelAPI();
 
 
-            var queryURL = capCall + "thor" + mKey;
+            var queryURL = capCall + charName + mKey;
 
 
             function getMarvelAPI() {
