--- a/index.html
+++ b/index.html
@@ -1,172 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Marvel V Marvel</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
-    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.0.0/firebase.js"></script>
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<title></title>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+	<script type="text/javascript" src="test.js"></script>
+
 </head>
-
 <body>
-    <div class="container">
-        <nav class="navbar navbar-inverse" style="color: #f5f5f5">
-            <h1 class="text-center">Marvel Vs. Marvel</h1>
-            <h2 class="text-center">Who Will Win?</h2>
-        </nav>
-        <br>
-        <div class="navbar-fixed-bottom">
-            <div class="col-sm-2">
-                <div class="panel panel-default">
-                    <div class="panel-heading" style="background-color: black">
-                        <div class="btn" style="color: #f5f5f5">
-                            <h1 style="text-align: center">Hero Stats</h1>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4">
-            </div>
-            <div class="col-sm-2">
-                <div class="panel panel-default">
-                    <div class="panel-heading" style="background-color: black">
-                        <div class="btn" style="color: #f5f5f5">
-                            <h1 class="text-center">Villain Stats</h1>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-xs-2 col-md-2">
-    </div>
-    <div class="col-xs-2 col-md-2">
-        <div class="panel panel-default" style="background-color: black">
-            <div class="panel-heading" style="background-color: black">
-                <div class="panel-title" style="background-color: black">
-                    <h1 class="text-center" style="color: #f5f5f5">Hero's</h1>
-                </div>
-            </div>
-            <div class="text-center panel-body">
-                <a class="thumbnail">
-                    <img class="char" id="hulk" src="assets/images/Hulk.jpg" alt="Hulk">
-                    <h3>Hulk</h3>
-                </a>
-                <a href="#" class="thumbnail">
-                    <img class="char" id="irnMn" src="assets/images/ironman.jpg" alt="IronMan">
-                    <h3>Iron Man</h3>
-                </a>
-                <a href="#" class="thumbnail">
-                    <img class="char" id="cptnA" src="assets/images/cptnAmerica.jpg" alt="CaptainAmerica">
-                    <h3>Captain America</h3>
-                </a>
-                <a href="#" class="thumbnail">
-                    <img class="char" id="thor" src="assets/images/thor.jpg" alt="Thor">
-                    <h3>Thor</h3>
-                </a>
-                <a href="#" class="thumbnail">
-                    <img class="char" id="sqrlG" src="assets/images/squirrel_girl.png" alt="SquirrelGirl">
-                    <h3>Squirrel Girl</h3>
-                </a>
-            </div>
-        </div>
-    </div>
-    <div class="col-xs-2 col-md-2">
-    </div>
-    <div class="col-xs-2 col-md-2">
-    </div>
-    <div class="col-xs-2 col-md-2">
-        <div class="panel panel-default" style="background-color: black">
-            <div class="panel-heading" style="background-color: black">
-                <div class="panel-title" style="background-color: black">
-                    <h1 class="text-center" style="color: #f5f5f5">Villain's</h1>
-                </div>
-            </div>
-            <div class="text-center panel-body">
-                <a class="thumbnail char">
-                    <img id="loki" src="loki.jpg" alt="Loki">
-                    <h3>Loki</h3>
-                </a>
-                <a href="#" class="thumbnail char">
-                    <img id="sLee" src="assets/images/stan-lee.jpg" alt="StanLee">
-                    <h3>Stan Lee</h3>
-                </a>
-                <a href="#" class="thumbnail char">
-                    <img id="mag" src="assets/images/magneto.jpg" alt="Magneto">
-                    <h3>Magneto</h3>
-                </a>
-                <a href="#" class="thumbnail">
-                    <img class="char" id="rskl" src="assets/images/redskull.jpg" alt="RedSkull">
-                    <h3>Red Skull</h3>
-                </a>
-                <a href="#" class="thumbnail">
-                    <img class="char" id="ult" src="assets/images/ultron.png" alt="Ultron">
-                    <h3>Ultron</h3>
-                </a>
-            </div>
-        </div>
-    </div>
-    </div>
-    <script type='text/javascript'>
 
-  // Initialize Firebase
-      var config = {
-        apiKey: "AIzaSyAH1lZdDNKxDUb6qxpzES4fdtDjHlEudDs",
-        authDomain: "marvel-vs-marvel.firebaseapp.com",
-        databaseURL: "https://marvel-vs-marvel.firebaseio.com",
-        projectId: "marvel-vs-marvel",
-        storageBucket: "marvel-vs-marvel.appspot.com",
-        messagingSenderId: "434172907026"
-      };
+	<div id="test"></div>
 
-      firebase.initializeApp(config);
-
-      var database = firebase.database();
-
-      var villainArr = []
-      var capCall;
-      var mKey;
-
-      database.ref().on('value', function(snapshot) {
-                capCall = snapshot.val().reqURL;
-                mKey = snapshot.val().mKey;
-                console.log(mKey);
-                var villainsList = snapshot.val().villainsList;
-                console.log(capCall);
-                for (var key in villainsList) {
-                        villainArr.push(key);
-                        console.log(villainArr);
-                }
-            });
-
-        $('.char').click(function() {
-            console.log('working');
-            var charName = $(this).children('h3').html();
-            var charId = $(this).children('img').attr('id');
-            console.log(charName);
-            console.log(charId);
-
-            getMarvelAPI();
-
-
-            var queryURL = capCall + charName + mKey;
-
-
-            function getMarvelAPI() {
-                    $.ajax({
-                        url: queryURL,
-                        method: 'GET'
-                    }).done(function(response) {
-                        console.log(response);
-                });
-            };
-        });
-
-    </script>
 </body>
-
 </html>
